--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="web, project, design, html, css, coding, linux, cybersecurity">
     <meta name="author" content="IA Helper">
     <title>Code Projects - Updated Design</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -48,9 +48,9 @@
                     <hr class="separador">
                 </div>
                 <div class="elements-visuals">
-                    <div class="cercle linux-image">LNX</div>
-                    <div class="cercle linux-image">TUX</div>
-                    <div class="cercle linux-image">CLI</div>
+                    <div class="cercle linux-image">if (cmd)</div>
+                    <div class="cercle linux-image">sudo</div>
+                    <div class="cercle linux-image">#!/bin/sh</div>
                 </div>
             </article>
 
@@ -65,9 +65,9 @@
                     <hr class="separador">
                 </div>
                 <div class="elements-visuals">
-                    <div class="cercle css-image">CSS</div>
-                    <div class="cercle css-image">GRID</div>
-                    <div class="cercle css-image">FLEX</div>
+                    <div class="cercle css-image">.class</div>
+                    <div class="cercle css-image">display:flex;</div>
+                    <div class="cercle css-image">@media</div>
                 </div>
             </article>
 
