--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Main project page, structured according to the visual design, featuring coding content.">
+    <meta name="description" content="Main project page, structured according to the visual design, featuring coding and cybersecurity content.">
     <meta name="keywords" content="web, project, design, html, css, coding, linux, cybersecurity">
     <meta name="author" content="IA Helper">
     <title>Code Projects - Updated Design</title>
@@ -31,8 +31,19 @@
 
         <aside class="columna-aside">
             <div class="aside-content">
-                <h3>Structured Content Area</h3>
-                </div>
+                <h3>Cybersecurity Tasks: Overview</h3>
+                <p>Cybersecurity is the practice of protecting systems, networks, and programs from digital attacks. These attacks are usually aimed at accessing, changing, or destroying sensitive information; extorting money from users; or interrupting normal business processes.</p>
+
+                <h4>Key Activities:</h4>
+                <ul>
+                    <li>**Risk Analysis:** Identifying vulnerabilities and threats in the system.</li>
+                    <li>**Threat Monitoring:** Using tools like SIEM to monitor network traffic for suspicious activity.</li>
+                    <li>**Implementing Defenses:** Deploying firewalls, antivirus, and intrusion prevention systems.</li>
+                    <li>**Incident Response:** Handling security breaches, containing the damage, and recovering affected systems.</li>
+                    <li>**Security Audits:** Regularly testing systems (e.g., penetration testing) to find weaknesses.</li>
+                    <li>**User Education:** Training employees on security protocols (phishing, password hygiene).</li>
+                </ul>
+            </div>
         </aside>
 
         <section class="seccio-projectes">
