--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
 
             <article class="projecte">
                 <div class="info-textual">
-                    <h2>Linux Project: System Administration Basics</h2>
+                    <section class="seccio-projectes">
+            <article class="projecte">
+                <div class="info-textual">
+                    <h2><a href="linux_project.html">Linux Project: System Administration Basics</a></h2>
+                    <p class="descripcio-linies">Exploring core Linux distributions (Ubuntu, CentOS)</p>
                     <p class="descripcio-linies">Exploring core Linux distributions (Ubuntu, CentOS)</p>
                     <p class="descripcio-linies">Basic command-line interface (CLI) usage</p>
                     <p class="descripcio-linies">User and permissions management</p>
