--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             <article class="projecte">
                 <div class="info-textual">
-                    <h2>CSS Project: Modern Layout and Design</h2>
+                    <h2><a href="http://externa.com/css-guide">CSS Project: Modern Layout and Design</a></h2>
                     <p class="descripcio-linies">Introduction to CSS Selectors and properties</p>
                     <p class="descripcio-linies">Layout techniques using Flexbox and Grid</p>
                     <p class="descripcio-linies">Understanding the CSS Box Model</p>
