--- a/css_project.html
+++ b/css_project.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Dedicated page for the CSS Project.">
     <title>CSS Project Details</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     </head>
 <body>
 
