--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="web, project, design, html, css, coding, linux, cybersecurity">
     <meta name="author" content="IA Helper">
     <title>Code Projects - Updated Design</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
