--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="menu-navegacio-principal">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="projects_portfolio.html">Projects</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Other Links</a></li>
             </ul>
