--- a/projects_portfolio.html
+++ b/projects_portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of all technical projects, including Linux, CSS, Python, SQL, PowerShell, and Packet Tracer.">
     <title>Projects Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
