--- a/projects_portfolio.html
+++ b/projects_portfolio.html
@@ -54,7 +54,7 @@
                 <h2>Emerging Technology Projects:</h2>
                 <ul>
                     <li>
-                        <h3><a href="#">Python Project: Data Automation and Scripting</a></h3>
+                        <h3><a href="python_project.html">Python Project: Data Automation and Scripting</a></h3>
                         <p>Introduction to data structures, control flow, and automating common tasks using Python scripts.</p>
                     </li>
                     <li>
