--- a/python_project.html
+++ b/python_project.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Dedicated page for the Python Project focusing on data and automation.">
     <title>Python Project Details</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/style.css">
     </head>
 <body>
 
