--- a/projects_portfolio.html
+++ b/projects_portfolio.html
@@ -58,7 +58,7 @@
                         <p>Introduction to data structures, control flow, and automating common tasks using Python scripts.</p>
                     </li>
                     <li>
-                        <h3><a href="#">SQL Project: Database Management and Queries</a></h3>
+                        <h3><a href="sql_project.html">SQL Project: Database Management and Queries</a></h3>
                         <p>Learning how to design databases, write complex SELECT queries, and manage relational data (CRUD operations).</p>
                     </li>
                     <li>
