--- a/projects_portfolio.html
+++ b/projects_portfolio.html
@@ -62,11 +62,11 @@
                         <p>Learning how to design databases, write complex SELECT queries, and manage relational data (CRUD operations).</p>
                     </li>
                     <li>
-                        <h3><a href="#">PowerShell Project: Windows System Management</a></h3>
+                        <h3><a href="powershell_project.html">PowerShell Project: Windows System Management</a></h3>
                         <p>Scripting for Windows environments, managing Active Directory, and automating administrative tasks using cmdlets.</p>
                     </li>
                     <li>
-                        <h3><a href="#">Packet Tracer Project: Network Simulation and Configuration</a></h3>
+                        <h3><a href="packet_tracer_project.html">Packet Tracer Project: Network Simulation and Configuration</a></h3>
                         <p>Designing and simulating network topologies, configuring routers and switches, and troubleshooting network issues.</p>
                     </li>
                 </ul>
