--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="projects_portfolio.html">Projects</a></li>
+                <li><a href="satisfaction_form.html">Satisfaction Form</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Other Links</a></li>
             </ul>
