--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 
+    <div class="hacker-background"></div>
     <header class="capcalera-principal">
         <div class="logo-container">
             <div class="code-image-simulation">
@@ -105,6 +106,8 @@
             <a href="#">[Social 3]</a>
         </div>
     </footer>
+
+    <script src="./js/matrix_effect.js"></script>
 
 </body>
 </html>
