--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <div class="hacker-background"></div>
+    <canvas id="matrixCanvas"></canvas>
     <header class="capcalera-principal">
         <div class="logo-container">
             <div class="code-image-simulation">
@@ -20,7 +20,7 @@
         </div>
         <nav class="menu-navegacio-principal">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="projects_portfolio.html">Projects</a></li>
                 <li><a href="satisfaction_form.html">Satisfaction Form</a></li>
                 <li><a href="#">Contact</a></li>
