--- a/css_project.html
+++ b/css_project.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     </head>
 <body>
-
+    <canvas id="matrixCanvas"></canvas>
     <header class="capcalera-principal">
         <div class="logo-container">
             <div class="code-image-simulation">
@@ -82,6 +82,6 @@
             <a href="#">[Social 3]</a>
         </div>
     </footer>
-
+    <script src="./js/matrix_effect.js"></script>
 </body>
 </html>
